--- a/shop.html
+++ b/shop.html
@@ -15,6 +15,8 @@
       <a href="shop.html" class="active">Shop</a>
       <a href="cart.html">Cart</a>
       <a href="about.html">About</a>
+      <a href="login.html">Login</a>
+      <a href="signup.html">Sign Up</a>
     </nav>
   </header>
 
