--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <a href="about.html">About</a>
       <a href="login.html">Login</a>
       <a href="signup.html">Sign Up</a>
+      <a href="profile.html">Profile</a>
     </nav>
   </header>
 
@@ -31,3 +32,4 @@
   </footer>
 </body>
 </html>
+
