--- a/profile.html
+++ b/profile.html
@@ -57,7 +57,7 @@
     </nav>
   </header>
 
-  <main class="form-container">
+  <main class="profile-card">
     <h2>Your Profile</h2>
     <img id="profile-pic" src="https://via.placeholder.com/100" alt="Profile Picture">
     <input type="file" id="upload-pic" accept="image/*" />
@@ -65,7 +65,7 @@
     <input type="email" id="edit-email" placeholder="Email" />
     <button onclick="saveProfile()">Save Changes</button>
     <button onclick="deleteAccount()" class="btn-danger">Delete Account</button>
-    
+
   </main>
 
   <footer>
@@ -75,4 +75,3 @@
   <script src="JavaScript/profile.js"></script>
 </body>
 </html>
-
