--- a/cart.html
+++ b/cart.html
@@ -15,8 +15,10 @@
       <a href="shop.html">Shop</a>
       <a href="cart.html" class="active">Cart</a>
       <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
       <a href="login.html">Login</a>
       <a href="signup.html">Sign Up</a>
+
     </nav>
   </header>
 
