--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
       <a href="shop.html">Shop</a>
       <a href="cart.html">Cart</a>
       <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
       <a href="login.html">Login</a>
       <a href="signup.html">Sign Up</a>
       <a href="profile.html">Profile</a>
+
     </nav>
   </header>
 
@@ -32,4 +34,3 @@
   </footer>
 </body>
 </html>
-
