--- a/profile.html
+++ b/profile.html
@@ -64,6 +64,7 @@
     <input type="text" id="edit-name" placeholder="Full Name" />
     <input type="email" id="edit-email" placeholder="Email" />
     <button onclick="saveProfile()">Save Changes</button>
+    <!--ADD DELETE OPTION 08-05-2025-->
     <button onclick="deleteAccount()" class="btn-danger">Delete Account</button>
 
   </main>
